test(input): протестировать работу сигналов для input
сигалы прекрасно работают

несколько сигналов для одного эффекта тоже корректно работают

сигналы между элементами не пересекаются

одновременное изменение нескольких сигналов тоже работает

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
     type="module"
     src="/src/main.ts"
   ></script>
+    <script> 
+    const inpt1 = document.querySelector('#inp1');
+    setTimeout(() => { 
+      inp1.setAttribute('placeholder', 'sdklfkljklsdf');
+    }, 2000);
+    setTimeout(() => { 
+      inp1.setAttribute('test', '12312313123')
+    }, 4000);
+    setTimeout(() => { 
+      inp1.setAttribute('placeholder', '111')
+      inp1.setAttribute('test', '')
+    }, 6000);
+    </script>
 </body>
 
 </html>
